Overview of Changes in gst123-0.0.2:

* time display includes hours now

Overview of Changes in gst123-0.0.1:

* initial public release