@@ -1,5 +1,5 @@
 .\" generator: doxer.py 0.6
-.\" generation: 2010-04-01T10:37:28
+.\" generation: 2010-05-02T12:51:51
 .TH "GST123" "1" "Wed Apr 19 00:50:37 2006" "beast-" "GST123 Manual Page"
 
 .SH
@@ -70,8 +70,50 @@ playing multiple files, this will stop the current file and begin playing the
 next one. If you want to abort playing immediately instead of skipping to the
 next file, press Ctrl-C within the first second of the playback of a new file.
 .SH
+KEYBOARD INPUT
+
+
+.PP
+
+
+
+
+.TP
+\fBcursor left/right\fP 
+.br
+Seek 10 seconds backwards/forwards.
+
+.TP
+\fBcursor down/up\fP 
+.br
+Seek 1 minute backwards/forwards.
+
+.TP
+\fBpage down/up\fP 
+.br
+Seek 10 minute backwards/forwards.
+
+.TP
+\fBspace\fP 
+.br
+Toggle pause.
+
+.TP
+\fBq\fP 
+.br
+Quit gst123.
+
+.TP
+\fB?\fP 
+.br
+Show keyboad help.
+
+.PP
+
+
+.SH
 SEE ALSO
 
 
 .PP
-BEAST/BSE Website (http://beast.gtk.org)
+gst123 Website (http://space.twc.de/~stefan/gst123.php)
